# tauri-plugin-scoped-storage

./: .gitignore  Cargo.toml  DEVELOPER.md  LICENSE  README.md  build.rs  package.json  rollup.config.js
.github/workflows/: publish.yml  release.yml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: ExamplePlugin.kt  ScopedStoragePlugin.kt  ScopedStorageSupport.kt
android/src/test/java/: ExampleUnitTest.kt
docs/: manual-test-notes.md
examples/tauri-app/: index.html  package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift  ScopedStoragePlugin.swift  ScopedStorageSupport.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: append_file.toml  copy.toml  forget_folder.toml  get_folder_info.toml  move.toml  mv.toml  readdir.toml  remove_dir.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  path.rs
