[package]
name = "tauri-plugin-scoped-storage"
version = "0.1.1"
authors = ["Daniele Rolli"]
description = "Tauri 2 plugin for user-approved scoped folder access on Android and iOS"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-scoped-storage"

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
